# graph-visualizer

./: .gitignore  README.md
graph_visualizer/: pyproject.toml
graph_visualizer/api/: __init__.py  pyproject.toml
graph_visualizer/api/components/: data_source.py  visualizer.py
graph_visualizer/api/model/: edge.py  graph.py  node.py  node_attribute.py
graph_visualizer/core/: bird_render.py  create_edge.py  create_node.py  delete_node.py  exceptions.py  plugin_registry.py  query_strategies.py  render_service.py  search_filter.py  tree_render.py  update_node.py  workspace.py  workspace_manager.py
graph_visualizer/plugins/data_source/json_data_source/: dataset.json  json_data_source.py  pyproject.toml  test_loader.py
graph_visualizer/plugins/data_source/json_data_source/dataset/: dataset_config.py  network_dataset.json  people_dataset.json  project_dataset.json  social_dataset.json  test_dataset.json
graph_visualizer/plugins/data_source/xml_data_source/: city_intersections.xml  pyproject.toml  test_loader.py  xml_data_source.py
graph_visualizer/plugins/data_source/xml_data_source/data/: city_intersections.xml  short_acyclic.xml  short_cyclic.xml  test.xml
graph_visualizer/plugins/visualizer/block_visualizer/: __init__.py  plugin.py
graph_visualizer/plugins/visualizer/simple_visualizer/: __init__.py  plugin.py
graph_visualizer/web/: db.sqlite3  manage.py
graph_visualizer/web/explorer/: apps.py  urls.py  views.py
graph_visualizer/web/explorer/static/: explorer.css  explorer.js
graph_visualizer/web/gvsite/: settings.py  wsgi.py
(+1 files in other folders)
