[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_data_source"
version = "0.1"
dependencies = [
    "api==0.1"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["json_data_source"]

[project.entry-points."graph_explorer.datasources"]
json_data_source = "json_data_source.json_data_source:JsonDataSourceLoader"