[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xml_data_source"
version = "0.1"
dependencies = [
    "api",
    "graph_visualizer==0.1"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["xml_data_source"]

[project.entry-points."graph_explorer.datasources"]
xml_data_source = "graph_visualizer.plugins.data_source.xml_data_source.xml_data_source:XmlDataSourceLoader"